# email-indexer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
email_indexer/: __init__.py  __main__.py  backfill_metadata.py  cli.py  config.py  email_parser.py  embeddings.py  gmail_fetcher.py  indexer.py  mcp_server.py  scraper.py  search.py  search_cli.py  settings.py  store.py  tagger.py
email_indexer/parsers/: __init__.py  _helpers.py  daily_dose.py  daily_dose_plain.py  medium.py
scripts/: dump_email_html.py  run_indexer_claude.py
tests/: conftest.py  test_config.py  test_daily_dose_parser.py  test_email_metadata.py  test_email_parser.py  test_gmail_fetcher.py  test_indexer.py  test_mcp_server.py  test_medium_parser.py  test_search.py  test_store.py  test_tagger.py
